# cakto-split-payment-challenge

./: .docker.env  .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
apps/order/: enums.py  models.py  serializers.py  urls.py
apps/order/migrations/: 0001_initial.py
apps/product/: models.py  serializers.py  service.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py  0002_rename_user_product_owner.py
apps/split_rules/: apps.py  enums.py  models.py  monitoring.py  serializers.py  service.py  tests.py  urls.py  views.py
apps/split_rules/migrations/: 0001_initial.py  0002_split_rules_delete_splitrules.py  0003_remove_rules_status.py  0004_remove_split_is_active_rules_created_at_and_more.py  0005_rules_recipient_id.py
apps/split_rules/validators/: BankTransferValidator.py  PaymentMethodValidator.py  PaymentMethodValidatorInterface.py  PixValidator.py  TestValidator.py
config/: models.py
config/migrations/: 0001_initial.py
docs/: api-specification.md  architecture-decisions.md  database-design.md  execution-plan.md
payment/: BankTransfer.py  PaymentInterface.py  PaymentProcessor.py  PixPayment.py
src/: settings.py  urls.py
